configuracion del charset
la configuracion sera UTF8 por que la pagina sera visitada por personas que hablan español

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>ESTUDIO FOTOGRAFICO</title>
+	<meta charset="utf-8">
+	<title>ESTUDIO FOTOGRÁFICO</title>
 </head>
 <body>
-	<h1>Bienvenido al website de estudio fotografico</h1>
-	<h2>Aqui podras ver todos nuestros trabajos</h2>
+	<h1>Bienvenido al website de estudio fotográfico</h1>
+	<h2>Aquí podras ver todos nuestros trabajos</h2>
 </body>
 </html>
