--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<h1>Bienvenido al website de estudio fotográfico</h1>
-	<h2>Aquí podras ver todos nuestros trabajos</h2>
+	<p>Aquí podras ver todos nuestros trabajos</p>
 </body>
 </html>
